--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.profiles.active=dev
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sravan.k.vodnala@gmail.com
+spring.mail.password=ipbovbiitfoscgnf
+#spring.mail.username=${email}
+#spring.mail.password=${APP_TOKEN}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
